Fix text alignment

--- a/packages/envision/src/scss/button.scss
+++ b/packages/envision/src/scss/button.scss
@@ -85,7 +85,7 @@
    }
 
    &--block {
-      display: block;
+      display: flex;
       width: 100%;
       white-space: normal;
    }
