--- a/packages/envision/src/scss/mixin/button.scss
+++ b/packages/envision/src/scss/mixin/button.scss
@@ -150,7 +150,7 @@
    min-height: $min-height;
 
    @include squareIconButton {
-      min-height: $min-height;
+      height: $min-height;
       width: $min-height;
       padding: calc(#{$min-height} - 2px) 0 0; // Compensate for border
    }
